--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -121,6 +121,14 @@
   file = {/Users/I518232/Zotero/storage/3QPU4C26/Martinez-Plumed et al. - 2021 - CRISP-DM Twenty Years Later From Data Mining Proc.pdf}
 }
 
+@online{DFvsJSON,
+  title = {Memory {{Optimisation}} – {{Python DataFrames}} vs {{Lists}} and {{Dictionaries}} ({{JSON-like}})},
+  author = {Tok, Joel},
+  date = {2021-06-07},
+  url = {https://www.joeltok.com/blog/2021-6/memory-optimisation-python-dataframes-vs-json-like},
+  urldate = {2022-05-13}
+}
+
 @book{epsteinParsingTuringTest2008,
   title = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
   shorttitle = {Parsing the Turing Test},
