--- a/Inhalt/04_Inhalt/content_data_preparation.tex
+++ b/Inhalt/04_Inhalt/content_data_preparation.tex
@@ -1,12 +1,11 @@
 \chapter{Data Preparation}
-
-	\section{Data processing and data wrangling}
-	
     Data preparation is the process of transforming the acquired dataset into a dataset which can be fed into learning algorithms and is cleaned of impurities in such a way, that the learning results are likely satisfactory. Impurities to some extent were already identified in the prior chapter, additionally, shifted columns, encoding errors or different data formats have to be accounted for.
-    Data preparation includes data wrangling, data cleaning, and feature extraction. What is left should be a uniform dataset, which is in a format that is understandable by the desired algorithms.
-    
+	Data preparation includes data wrangling, data cleaning, and feature extraction. What is left should be a uniform dataset, which is in a format that is understandable by the desired algorithms.
+	
+	\section{Data processing and data wrangling}
+
         \subsection{Alternatives}
-        The chosen dataset consists of files in \ac{JSON}. Several alternatives for storage and transforming the data exist. 
+        The chosen dataset consists of files in \ac{JSON} format. Several alternatives for storage and transforming the data exist. 
         
         \paragraph{Storage Location}
         Within the constraints of the thesis, three options are available for data storage. Firstly, data can be stored locally on the available machine. The data is available without internet access, and the local machine has high read/write speeds. This option requires no additional learning, and is free of charge for the department. A multitude of libraries exist for accessing files on a local file system. A downside is the limited scalability in terms of storage capacity and read/write operations. Additionally, local storage makes the data only available to this specific machine.
@@ -38,35 +37,64 @@
         \end{table}
         
         \paragraph{Data Format}
-        The data is still available only in the from \ac{JSON} documents.
+        The data is still available only in the from \ac{JSON} documents. Python allows for easy parsing of these objects, but this option is highly inefficient compared to native Python data structures.
+        The equivalent to \ac{JSON} in Python are combinations between lists and dictionaries. Dictionaries are an implementation of the \lstinline|Map| data structure.
         
-        - transforming json documents into dataframe rows
+        This option stands in contrast to a data format commonly used in data science tasks: the \lstinline|DataFrame|. Both formats, the dictionaries and DataFrames have specific advantages and disadvantages.
         
+        The \lstinline|DataFrame| is structured like a table, consisting of labeled rows and columns. This data structure is implemented in the library \lstinline|pandas|. 
+        Different data formats such as strings, floats or boolean values can be stored in the table.        Optimized methods for calculating row-wise and column-wise operations are supplied in the library. This makes the \lstinline|DataFrame| one of the most popular tools for data scientists.
+        
+       \lstinline|DataFrame|s being suited for various purposes, makes them inflated and slower than low-level data structures. The indexing operation, for example, has to address a multitude of cases. This makes it slower than a simple dictionary access. Appendix \ref{benchmarkDF} details the comparison in a benchmark.
+       
+       Surprisingly, storing \ac{JSON} data in a \lstinline|DataFrame| is less memory-intensive than storing the same data in dictionaries and lists \cite{DFvsJSON}. This means  \lstinline|DataFrame|s are favorable for storage and calculations with large data quantities.
+       
+       Considering all factors, the best choice is transforming the dataset into a  \lstinline|DataFrame|. Still, the advantages of dictionaries and lists in basic use-cases will be kept in mind for later.
+     
     \subsection{Theoretical Implementation}
-    For the data wrangling the invoices have to be read into memory and then processed into a reusable structure. Each document will be read into memory, then the necessary information will be extracted. All invoices will be combined into one data structure, which then is persisted for later use.
-
+    For the data wrangling the invoices have to be read into memory and then processed into a reusable structure. All invoices will be combined into \lstinline|DataFrame|s, which then are persisted for later use.
+	
     \begin{figure}[ht]
         \centering
         \includegraphics[height=5cm]{Bilder/practical/entity_relationship.png}
         \caption{Entity Relationship Diagram for Invoce Documents}
         \label{fig:er}
     \end{figure}
+	The documents can be separated into two fundamental entities: the invoice and the line items. The entity relationship diagram (\ref{fig:er}) shows how invoices and line items are related. The invoice contains at least one line item, and the information in the invoice is relevant to all of its line items. This includes information about the vendor, and the invoice date. The line items of an invoice contain specific information on the products, such as the material number and the description.
+	An invoice and its line items can be matched through an unique identifier, which is also the filename.
 
-	The data for an invoice and its contained items is stored in an array of objects. This is also shown in code example (\ref{code:JSONSchema}) of a shortened JSON Schema for one invoice. The array "annotations" contains objects. One object represents information such as the invoice date or the unit price. 
-	Information about invoice items have labels containing the prefix "lineItem". One invoice containing several items is represented by duplicate values of one label (in the example \ref{code:JSONInvoice} the label "lineItem.description.value"). Here, the order of the labels has to be retained during data wrangling to ensure not mixing up information about different invoice items.
+	 \begin{figure}[ht]
+		\centering
+		\includegraphics[height=11.5cm]{Bilder/preprocessing/df_schema.png}
+		\caption{Theoretical Implementation of the Data Wrangling}
+		\label{fig:invoice_df_schema}
+	\end{figure}	
 
-	\lstinputlisting[
-	label=code:JSONInvoice,    % Label; genutzt für Referenzen auf dieses Code-Beispiel
-	caption=JSON of one invoice,
-	captionpos=b,               % Position, an der die Caption angezeigt wird t(op) oder b(ottom)
-	style=EigenerPythonStyle,   % Eigener Style der vor dem Dokument festgelegt wurde
-	firstline=0,                % Zeilennummer im Dokument welche als erste angezeigt wird
-	lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen wird
-	]{Quellcode/invoice.json}
+	Now, looking at the technical side of the file composition.	The data for an invoice and its line items is stored in an array of objects. The array "annotations" contains objects, each one representing information such as the invoice date or the unit price. A schematic description of how the invoice data should be represented after extraction is shown in figure \ref{fig:invoice_df_schema}: One invoice is modeled as one row in the table. Different attributes are represented as columns.
+	Information about line items have labels containing the prefix "lineItem". One invoice containing several items is represented by duplicate values of one label (in the example \ref{code:JSONInvoice} the label "lineItem.description.value"). Each new label "lineItem.description.value" denotes a new line item. Here, the order of the labels has to be retained during data wrangling to ensure not mixing up information about different invoice items. Each new line item should be a new row in the table of line items.
+	
+	The goal of the data wrangling process is to create two \lstinline|DataFrame|s, one for the invoices and one for the line items.
+	Additionally, another data structure will be created to optimize recurring and complex operations.
+	
+	Data exploration shows, there are only 79.741 unique descriptions for the listed items. By saving only the unique values, the required space is reduced to less than one fourth compared to before. Additionally, this step is required by most machine learning models, as duplicate input values can skew the outcome. The model is chosen later, so this processing step leaves the model selection more open to different kinds of learning algorithms.
+	
+	After the deletion of duplicate descriptions, the relationship between one line item and its description is not one-to-one, but rather one description belonging to several different line items. Model outputs will be a classification of one description, so to restore the relationship between the classification result and one line item, a mapping is constructed.
+	This dictionary maps one description to all line items (ID) which have this description value.
+	
+	\begin{figure}[ht]
+		\centering
+		\includegraphics[height=6cm]{Bilder/description_map.png}
+		\caption{Schematic depiction of the Mapping of Description to their Line Item IDs}
+		\label{fig:mapping}
+	\end{figure}
+
+	
+	After the construction of both tables and the mapping, these artifacts should be serialized. This way, they can easily be loaded into memory without the effort to reconstruct them from scratch.
 	
     \subsection{Practical Implementation}
 	
-	The information on invoices is stored in a tabular data structure, a python pandas DataFrame. Worth mentioning is that some invoices contain more information than others. In this case, invoices are still appended into one table, but fields for non-existent values are left empty. The filename is the unique identifier for one invoice.
+	The information on invoices is stored in a tabular data structure, a \lstinline|pandas DataFrame|. Worth mentioning is that some invoices contain more information than others. In this case, invoices are still appended into one table, but fields for non-existent values are left empty. In figure \ref{fig:df-invoices}, the first invoice does not have a total amount included, but since the second one does, this column is created.
+	The filename of one invoice contains the unique identifier for one invoice.
 	
 	\begin{figure}[ht]
 		\centering
@@ -75,34 +103,38 @@
 		\label{fig:df-invoices}
 	\end{figure}
 
-	Similarly, information on the invoice items is retrieved from the documents and stored in a pandas DataFrame. Every invoice item has an unique id and can be linked to the respective invoice through the filename.
+	Similarly, information on the invoice items is retrieved from the documents and stored in a \lstinline|pandas DataFrame|. Every line item has an unique id and can also be linked to the respective invoice through the filename.
 	
 	\begin{figure}[ht]
 		\centering
 		\includegraphics[height=6cm]{Bilder/practical/df_lineitems.png}
 		\caption{Exemplary depiction for processed invoice items in a DataFrame}
-		\label{fig:df-invoices}
+		\label{fig:df-invoice}
 	\end{figure}
 	
-	The resulting two DataFrames are serialized with the python standard library "pickle".  The data can be efficiently loaded into memory and reserialized again with this library.
+	The resulting two \lstinline|DataFrame|s are serialized with the python standard library \lstinline|pickle|. The data can be efficiently loaded into memory and re-serialized again with this library.
 	
-	This processing step allowed for storing the initial 5.12GB of data in a more usable format and takes up only a total of 393MB. Even further improvements to storage will be dicussed later on.
+	This processing step allowed for storing the initial 5.12GB of data in a more usable format and takes up only a total of 393MB.
 
-	The process of reading files from the disk is not inherently an expensive one, but in the realms of many thousand documents, processing times soon reach several days. Observing the execution of the python code showed a peculiarity: While the utilization of the used processor was consequently at the maximum, only one process is executed, leaving the total CPU usage at only 20\%. 
+	The process of reading files from the disk is not inherently an expensive one, but in the realms of many thousand documents, processing times soon reach several days. Observing the execution of the python code showed a peculiarity: While the utilization of the used processor was consequently at the maximum (in figure \ref{fig:cpu} at 97.1\%), only one process is executed, leaving the total CPU usage at only 20\%. 
 	
 	\begin{figure}[ht]
 		\centering
-		\includegraphics[height=4cm]{Bilder/practical/python_processes.png}
-		\caption{Exemplary depiction for processed invoice items in a DataFrame}
-		\label{fig:df-invoices}
+		\includegraphics[height=5cm]{Bilder/practical/python_processes.png}
+		\caption{CPU Usage during single-process Python Execution}
+		\label{fig:cpu}
 	\end{figure}
 	
 	
 	One question that may now arise is: Why doesn't python split up the workload and employ the full capacity of the machine?
-	This can be explained with the design of the Python interpreter. The \ac{GIL} controls access to the Python Virtual Machine executing the code. This lock only allows exactly one thread to run at a time \cite{corePython}. This of course is not favorable, as valuable CPU capacity is unused. Fortunately, the \ac{GIL} behaves in a special way regarding C code, and I/O operations in Python utilize C code: the lock is released before executing a C routine \cite{corePython}. This allows to bypass the (in this case) inconvenient locking mechanism. 
+	This can be explained with the design of the Python interpreter. The \ac{GIL} controls access to the Python Virtual Machine executing the code. This lock only allows exactly one thread to run at a time \cite{corePython}. This of course is not favorable, as valuable CPU capacity is idle. Fortunately, the \ac{GIL} behaves in a special way regarding C routines: the lock is released before executing C code \cite{corePython}. I/O operations in Python, such as opening files, utilize C code. This allows to bypass the, in this case, inconvenient locking mechanism. 
 	
-	Different python libraries exploit this speciality and allow to spawn a pool of different processes, which then execute calls asynchronously. One example is the ProcessPoolExecutor. A notable restriction is that only picklable objects can be submitted for multiprocessing. This concerns both fuction and its parameters. While this is not a problem in this task, this restriction will become important later on in the section about feature extraction.
+	Different python libraries exploit this specialty and allow to spawn a pool of different processes, which then execute calls asynchronously. One example is the \lstinline|ProcessPoolExecutor|. A notable restriction is that only picklable objects can be submitted for multiprocessing. This concerns both function and its parameters. While this is not a problem in this task, this restriction will become important later on in the section about feature extraction.
 	
+	For now, 
+	
+	how do I read in the files?
+	example code for a process pool
 
 
 	
@@ -119,21 +151,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
 >>>  ['of', 'special', 'baking', 'flour', 'type']
 \end{lstlisting}
 	 
-	\section{Considerations of Space and Time Complexity}
-	The dataset consists of over 150.000 invoices, and in those invoices, over 350.000 items are listed. 
-	With hardware-limitation in place, an optimized approach for storing and processing the data is required. 
-	Several considerations for speeding up processing time and reducing storage space can be made. 
-	In the following, the observations are explained and approaches for improvement are given.
-
-		\subsubsection{Duplicates and space complexity}
-		Investigation shows, there are only 79.741 unique descriptions for the listed items. By saving only the unique values, the required space is reduced to less than one fourth compared to before. Additionally, this step is required by most machine learning models, as duplicate input values can skew the outcome. The model is chosen later, so this processing step leaves the model selection more open to different kinds of learning algorithms.
-		
-		\subsubsection{Reconstructing Relationships and time complexity of searching}
-		After the deletion of duplicate descriptions (documents in the corpus), the 
-		
-		\includegraphics[height=8cm]{Bilder/description_map.png}
-
-Explain how I want to store the data. Explain the successive artifacts.
+	
 
         
         \section{Feature Extraction and Feature Engineering}
@@ -215,6 +233,7 @@ Explain how I want to store the data. Explain the successive artifacts.
             
             An embedding is a translation of a word into a high-quality vector. The model does so, as it has been trained on a large set of natural language data. Popular embeddings include word2vec, fasttext and doc2vec. Word2Vec is the original model and will be discussed in the following. 
             
+            \paragraph{Word2Vec}
             The word2vec model assumes that words appearing in a similar context are also similar to each other. There are two options for the input and output: the word $w_i$ and its context $c_i$.
             
             \includegraphics[height=4cm]{Bilder/word2vec/documents.png}
@@ -254,7 +273,21 @@ Explain how I want to store the data. Explain the successive artifacts.
             
             Word2vec can utilize two models for selecting observations: either skipgram or \ac{CBOW}. 
             
-            \subsection{Theoretical Implementation}
+            \paragraph{GloVe}
             
+            \paragraph{FastText}
+            
+            \subsection{Theoretical Implementation}
+            \subsubsection{Tf-Idf}
+            \subsubsection{Word Embedding Averaged}
+            \subsubsection{Word Embedding Tf-Idf}
             \subsection{Practical Implementation}
-            Tf-Idf weighed USEM Word vectors
+            \subsubsection{Tf-Idf}
+            \subsubsection{Word Embedding Averaged}
+            \subsubsection{Word Embedding Tf-Idf}
+            
+            
+            
+            
+            
+            
