data cleaning and preprocessing

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -8,6 +8,7 @@
 	\acro{AI BUS}{SAP AI Business Services}
 	\acro{BoW}{Bag of Words}
 	\acro{CBOW}{Continuous Bag of Words}
+	\acro{CPU}{Central Processing Unit}
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
