--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -261,7 +261,15 @@ The \lstinline|.at|  indexing is  62.06 times slower than dictionary access.\\
 The \lstinline|.iloc|  indexing is  310.28 times slower than dictionary access.\\
 The \lstinline|.iat|  indexing is  213.44 times slower than dictionary access.
 
-
+\section{File Processing Script}
+\lstinputlisting[
+label=code:InvoiceReader,    % Label; genutzt für Referenzen auf dieses Code-Beispiel
+caption=Python Script for extracting JSON Data into a DataFrame,
+captionpos=b,               % Position, an der die Caption angezeigt wird t(op) oder b(ottom)
+style=EigenerPythonStyle,   % Eigener Style der vor dem Dokument festgelegt wurde
+firstline=0,                % Zeilennummer im Dokument welche als erste angezeigt wird
+lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen wird
+]{Quellcode/reader}
 
 
 
