--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -56,10 +56,13 @@ To summarize both relevant data mining and business terminology, a glossary was 
 	\paragraph{Document} A document is a unit of data most typically containing natural language text.
 	\paragraph{Hyperscaler} A hyperscaler is a company offering architecture to adapt to changing workloads in cloud computing, networking and internet services.
 	\paragraph{\acf{NLP}} \ac{NLP} is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	\paragraph{Pickle}
+	\paragraph{Process}
 	\paragraph{Script} A script is  a small piece of code contained in a single file, most commonly written in a dynamic high-level programming language.
 	\paragraph{SAP AI Foundation} The SAP AI Foundation is a term describing SAP's offerings of the AI Launchpad and AI Core.
 	\paragraph{SAP AI Launchpad} The SAP AI Launchpad is a tool for the operation of AI content inside an SAP system.
 	\paragraph{SAP AI Core} SAP AI Core allows for training and serving AI scenarios \cite{schmitzLeonardo}.
+	\paragraph{Token}
 
 
 \section{Data Mining Goals}
