--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -367,6 +367,15 @@
   file = {/Users/I518232/Zotero/storage/X4YGSRA7/scrum-and-the-solo-dev-fb8e810ed42b.html}
 }
 
+@article{sklearn,
+  title = {Scikit-Learn: {{Machine}} Learning in {{Python}}},
+  author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  date = {2011},
+  journaltitle = {Journal of Machine Learning Research},
+  volume = {12},
+  pages = {2825--2830}
+}
+
 @online{srivastavaDataMining,
   title = {Difference {{Between Data Science}} and {{Data Mining}}},
   author = {Srivastava, Astitva},
