--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -21,6 +21,7 @@
 	\acro{NLTK}{Natural Language Toolkit}
 	\acro{OCR}{Optical Character Recognition}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
+	\acro{sklearn}{scikil-learn}
 	\acro{SQL}{Short Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
 
