--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -48,8 +48,8 @@
 \begin{document}
 \setlength{\parindent}{0pt}              % Keine Paragraphen Einrückung.
                                          % Dafür haben wir den Abstand zwischen den Paragraphen.
-\setcounter{secnumdepth}{2}              % Nummerierungstiefe fürs Inhaltsverzeichnis
-\setcounter{tocdepth}{1}                 % Tiefe des Inhaltsverzeichnisses. Ggf. so anpassen,
+\setcounter{secnumdepth}{10}              % Nummerierungstiefe fürs Inhaltsverzeichnis
+                 % Tiefe des Inhaltsverzeichnisses. Ggf. so anpassen,
                                          % dass das Verzeichnis auf eine Seite passt.
 \sffamily                                % Serifenlose Schrift verwenden.
 
@@ -69,7 +69,7 @@
 
 % ------ Inhaltsverzeichnis
 \singlespacing
-\setcounter{tocdepth}{2}
+\setcounter{tocdepth}{10}
 \tableofcontents
 
 % ------ Verzeichnisse
