--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -6,6 +6,7 @@
 	% Alphabetisch selbst sortieren - nicht verwendete Kürzel rausnehmen!
 	\acro{AI}{Artificial Intelligence}
 	\acro{AI BUS}{SAP AI Business Services}
+	\acro{BERT}{Bidirectional Encoder Representations from Transformers}
 	\acro{BoW}{Bag of Words}
 	\acro{CBOW}{Continuous Bag of Words}
 	\acro{CPU}{Central Processing Unit}
@@ -17,11 +18,12 @@
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
 	\acro{ML}{Machine Learning}
+	\acro{MLM}{Masked Language Model}
 	\acro{NLP}{Natural Language Processing}
 	\acro{NLTK}{Natural Language Toolkit}
 	\acro{OCR}{Optical Character Recognition}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
-	\acro{sklearn}{scikil-learn}
+	\acro{sklearn}{scikit-learn}
 	\acro{SQL}{Short Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
 
